# victors

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: CI.yml
src/: context.rs  errors.rs  experiment.rs  experiment_result.rs  lib.rs  observation.rs  result_publisher.rs  victor.rs
